@@ -206,6 +206,12 @@ condition|)
 block|{
 name|resolveOutputDir
 argument_list|(
+name|getBaseDirectory
+argument_list|()
+operator|.
+name|getURL
+argument_list|()
+argument_list|,
 name|cgen
 argument_list|)
 expr_stmt|;
@@ -224,42 +230,26 @@ return|return
 literal|null
 return|;
 block|}
-specifier|private
+specifier|static
 name|void
 name|resolveOutputDir
 parameter_list|(
+name|URL
+name|baseURL
+parameter_list|,
 name|CgenConfiguration
 name|cgenConfiguration
 parameter_list|)
 block|{
 if|if
 condition|(
-name|cgenConfiguration
-operator|.
-name|getRootPath
-argument_list|()
+name|baseURL
 operator|==
 literal|null
 condition|)
 block|{
 return|return;
 block|}
-name|URL
-name|url
-init|=
-name|getBaseDirectory
-argument_list|()
-operator|.
-name|getURL
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|url
-operator|!=
-literal|null
-condition|)
-block|{
 name|Path
 name|resourcePath
 decl_stmt|;
@@ -271,7 +261,7 @@ name|Paths
 operator|.
 name|get
 argument_list|(
-name|url
+name|baseURL
 operator|.
 name|toURI
 argument_list|()
@@ -312,6 +302,21 @@ name|getParent
 argument_list|()
 expr_stmt|;
 block|}
+name|Path
+name|oldRoot
+init|=
+name|cgenConfiguration
+operator|.
+name|getRootPath
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|oldRoot
+operator|==
+literal|null
+condition|)
+block|{
 name|cgenConfiguration
 operator|.
 name|setRootPath
@@ -319,6 +324,7 @@ argument_list|(
 name|resourcePath
 argument_list|)
 expr_stmt|;
+block|}
 name|Path
 name|prevPath
 init|=
@@ -442,7 +448,6 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 block|}
 block|}
