@@ -548,19 +548,6 @@ argument_list|(
 literal|false
 argument_list|)
 decl_stmt|;
-name|Application
-operator|.
-name|getInstance
-argument_list|()
-operator|.
-name|getInjector
-argument_list|()
-operator|.
-name|injectMembers
-argument_list|(
-name|cgenConfiguration
-argument_list|)
-expr_stmt|;
 name|cgenConfiguration
 operator|.
 name|setDataMap
